--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,23 +33,21 @@ dependencies:
   firebase_core: ^3.1.1
   firebase_auth: ^5.1.2
   cloud_firestore: ^5.0.2
+  flutter_dotenv: ^5.1.0 # The package (The "Reader")
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  flutter_native_splash: ^2.4.1 # For the school logo
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - .env
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
